// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FileAttachmentContainer/> error msg 1`] = `
<FileAttachmentContainer
  acceptedFormats=".tsv, .xls, .xlsx"
  allowDirectories={false}
  allowMultiple={false}
>
  <div
    className="file-upload--container block"
  >
    <label
      className="file-upload--label"
      htmlFor="fileUpload"
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
    >
      <i
        aria-hidden="true"
        className="fa fa-cloud-upload fa-2x cloud-logo"
      />
    </label>
    <input
      accept=".tsv, .xls, .xlsx"
      className="file-upload--input"
      id="fileUpload"
      multiple={false}
      name="fileUpload"
      onChange={[Function]}
      type="file"
    />
  </div>
  <Alert
    bsStyle="danger"
    className={null}
  >
    <div
      className="alert alert-danger"
      role="alert"
    >
      invalid file
    </div>
  </Alert>
  <div
    className="file-upload--file-entry-listing"
  />
</FileAttachmentContainer>
`;

exports[`<FileAttachmentContainer/> no props 1`] = `
<Fragment>
  <div
    className="file-upload--container block"
  >
    <label
      className="file-upload--label"
      htmlFor="fileUpload"
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
    >
      <i
        aria-hidden="true"
        className="fa fa-cloud-upload fa-2x cloud-logo"
      />
    </label>
    <input
      className="file-upload--input"
      id="fileUpload"
      multiple={false}
      name="fileUpload"
      onChange={[Function]}
      type="file"
    />
  </div>
  <div
    className="file-upload--file-entry-listing"
  />
</Fragment>
`;

exports[`<FileAttachmentContainer/> with attributes 1`] = `
<Fragment>
  <div
    className="file-upload--container block"
  >
    <label
      className="file-upload--label"
      htmlFor="fileUpload"
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
    >
      <i
        aria-hidden="true"
        className="fa fa-cloud-upload fa-2x cloud-logo"
      />
    </label>
    <input
      accept=".tsv, .xls, .xlsx"
      className="file-upload--input"
      id="fileUpload"
      multiple={false}
      name="fileUpload"
      onChange={[Function]}
      type="file"
    />
  </div>
  <div
    className="file-upload--file-entry-listing"
  />
</Fragment>
`;
